--- a/site_com_repositório/index.html
+++ b/site_com_repositório/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>registro de dev</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
     <main>
@@ -42,7 +43,7 @@
         <form action="">
             <section id="linguagens">
                 <div id="progama">
-                    <p>
+                    <p id="itens">
                         <label for="linguagem">
                             Quais mais linguagens você<input type="checkbox" name="html" class="linguagem"> HTML5 <input type="checkbox" name="css3" class="linguagem"> CSS3 <input type="checkbox" name="python" class="linguagem"> Python
                             <input type="checkbox" name="java" class="linguagem"> Java
